<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:elevation="4dp"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="20dp"
    app:cardMaxElevation="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            android:src="@drawable/demonslayer"
            app:riv_corner_radius="20dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/foregroundpostertopbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_title"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>